--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    implementation 'org.liquibase:liquibase-core'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 // JWT (для токенов) - версия для Spring Boot 3
