Add libraries in common-lib and sheduler test method

--- a/api-service/build.gradle
+++ b/api-service/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3' // or 'jjwt-gson' if you prefer
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
+    //это тянется с common-lib модуля
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    runtimeOnly 'org.postgresql:postgresql'
 }
 
 test {
