--- a/scheduler-service/build.gradle
+++ b/scheduler-service/build.gradle
@@ -1,20 +1,30 @@
-node -vnode -vplugins {
+plugins {
     id 'java'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
 
 group = 'com.sacreson'
-version = '1.0-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation project(':common-lib')
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+
+// тянетя с коммон-либ
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.postgresql:postgresql'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
-test {
-    useJUnitPlatform()
+
+java {
+    sourceCompatibility = '17'
 }
