--- a/common-lib/build.gradle
+++ b/common-lib/build.gradle
@@ -18,10 +18,14 @@ dependencyManagement {
 }
 
 dependencies {
+
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api 'org.postgresql:postgresql'
+    api 'com.fasterxml.jackson.core:jackson-annotations'
+    api 'org.springframework.security:spring-security-core'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'com.fasterxml.jackson.core:jackson-annotations'
 }
 
 java {
@@ -29,7 +33,7 @@ java {
 }
 
 bootJar {
-    enabled = false // Отключаем создание запускаемого JAR (он ищет main класс)
+    enabled = false // Это откючает создадие запускаемого JAR (он ищет main класс) иначе не запуститьчя
 }
 
 jar {
